fix/ dark mode persistence

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -45,33 +45,33 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+[data-theme='dark']{
+  --bg-200: #333;
+  --bg-500: #232323;
+  --bg-800: #1E1E1E;
+  --color-destaque: #F5E100;
+
+  --color-primary: #FFF;
+  --color-secondary: #999;
+
+  --color-cards-bg: #FFF
+  --percent-cards: .03
+
+}
+[data-theme='light']{
+  --bg-200: #a1a1a1e1;
+  --bg-500: rgb(209, 209, 209);
+  --bg-800: #dadada;
+  --color-destaque: #e67811;
+  --color-primary: #333333;
+  --color-secondary: #666666;
+  
+  
+  --color-cards-bg: #FFF
+  --percent-cards: .4
+}
+
 body {
-  &[data-theme='dark']{
-    --bg-200: #333;
-    --bg-500: #232323;
-    --bg-800: #1E1E1E;
-    --color-destaque: #F5E100;
-
-    --color-primary: #FFF;
-    --color-secondary: #999;
-
-    --color-cards-bg: #FFF
-    --percent-cards: .03
-
-  }
-  &[data-theme='light']{
-    --bg-200: #a1a1a1e1;
-    --bg-500: rgb(209, 209, 209);
-    --bg-800: #dadada;
-    --color-destaque: #e67811;
-    --color-primary: #333333;
-    --color-secondary: #666666;
-    
-    
-    --color-cards-bg: #FFF
-    --percent-cards: .4
-  }
-
 
   color: var(--color-primary);
   background: var(--bg-800);
